--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Angeline Sin Mei Tsui"
   avatar           : "A.Tsui_self_pic.JPG"
-  bio              : "Postdoc scholar in the Department of Psychology at Stanford University"
+  bio              : "UX data scientist at Huawei"
   location         : "Toronto, Canada"
   employer         :
   pubmed           :
