updated profile picture description

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Angeline Sin Mei Tsui"
   avatar           : "A.Tsui_self_pic.JPG"
-  bio              : "UX data scientist at Huawei"
+  bio              : "Senior UX Researcher"
   location         : "Toronto, Canada"
   employer         :
   pubmed           :
