--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,11 @@
 # main links links
 main:
 
-  - title: "Research"
-    url: /Research/
+  #- title: "Research"
+   # url: /Research/
+
+  - title: "Portfolio"
+    url: /portfolio/
     
   - title: "Publications"
     url: /publications/
