--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
 
-  #- title: "Research"
+  - title: "Research"
    # url: /Research/
 
-  - title: "Portfolio"
+  #- title: "Portfolio"
     url: /portfolio/
     
   - title: "Publications"
